Update package.json -> homepage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://vitaliilitvinchuk.github.io",
+  "homepage": "https://vitaliilitvinchuk.github.io/WebLabs/",
   "name": "some-site",
   "version": "0.1.0",
   "private": true,
